Updated html for basic headers and changed colors slightly. Added footer to later add copyright information on the bottom of the page and another place to get contact information.

--- a/index.html
+++ b/index.html
@@ -1,44 +1,85 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	    <title>Nicholas Joerger as a Website</title>
-	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	    <!-- Bootstrap -->
-	    <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<title>Nicholas Joerger as a Website</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- Bootstrap -->
+		<link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+		<link href="css/sticky-footer-navbar.css" rel="stylesheet" media="screen">
 
-	    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-	    <!--[if lt IE 9]>
-	      <script src="../../assets/js/html5shiv.js"></script>
-	      <script src="../../assets/js/respond.min.js"></script>
-	    <![endif]-->
-	  </head>
-	  <body>
-		<div class="navbar navbar-default navbar-fixed-top">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-					    <span class="icon-bar"></span>
-					    <span class="icon-bar"></span>
-					    <span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="index.html">Joerger</a>
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+		<!--[if lt IE 9]>
+		<script src="../../assets/js/html5shiv.js"></script>
+		<script src="../../assets/js/respond.min.js"></script>
+		<![endif]-->
+	</head>
+	<body>
+		<div id="wrap">
+			<div class="navbar navbar-default navbar-fixed-top">
+				<div class="container">
+					<div class="navbar-header">
+						<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+						    <span class="icon-bar"></span>
+						    <span class="icon-bar"></span>
+						    <span class="icon-bar"></span>
+						    <span class="icon-bar"></span>
+						    <span class="icon-bar"></span>
+						</button>
+						<a class="navbar-brand" href="index.html">Joerger</a>
+					</div>
+					<div class="navbar-collapse collapse ">
+						<ul class="nav navbar-nav">
+							<li class="active"><a href="">Home</a></li>
+							<li><a href="#about">Bio</a></li>
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown"  href="">Projects
+								<b class="caret "></b>
+								</a>
+								<ul class="dropdown-menu ">
+									<li><a href="#">Current</a></li>
+									<li><a href="#">Previous</a></li>
+								</ul>
+							</li>
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown"  href="">Research
+								<b class="caret "></b>
+								</a>
+								<ul class="dropdown-menu ">
+									<li><a href="#">Curent</a></li>
+									<li><a href="#">Previous</a></li>
+									<li><a href="#">Interests</a></li>
+								</ul>
+							</li>
+							<li><a href="#contact">Education</a></li>
+							<li class="dropdown">
+								<a class="dropdown-toggle" data-toggle="dropdown"  href="">Interests
+								<b class="caret "></b>
+								</a>
+								<ul class="dropdown-menu ">
+									<li><a href="#">Within computing</a></li>
+									<li><a href="#">Outside of computing</a></li>
+								</ul>
+							</li>
+							<li><a href="#about">Contact</a></li>
+						</ul>
+					</div><!--/.nav-collapse -->
 				</div>
-				<div class="navbar-collapse collapse ">
-					<ul class="nav navbar-nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</div><!--/.nav-collapse -->
 			</div>
-		</div>
-		<div class = "row col-md-9">
+<!--
+			<div class="page-header">
+			</div>
+-->
+			<div class = "row col-md-9">
 				<div class="jumbtron container">
 					<h1>This is the future home of Nicholas Joerger's online presence.</h1>
 				</div>
 			</div>
 		</div>
-
+		<div id="footer">
+			<div class="container">
+				<p class="text-muted credit">df</p>
+			</div>
+		</div>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="//code.jquery.com/jquery.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
